update errorprone to 2.47.0
git-svn-id: https://josm.openstreetmap.de/svn/trunk@19499 0c6e7542-c601-0410-84e7-c038aed88b3b